# harp-pedal-solver

./: .gitignore  Cargo.toml  Cross.toml  README.md  aquarium.hrp  bad-input.hrp  fire_music_eighths.hrp  simple.hrp
examples/: aquarium.hrp  aquarium2.hrp  aquarium3.hrp  avant-de-mourir.hrp  bug1.hrp  bug2.hrp  fire_music.hrp  fire_music_baseline.hrp  one-song.hrp  violet.hrp
src/: assign.rs  astar.rs  base.rs  candidate.rs  cli.rs  cost.rs  enharmonic.rs  lib.rs  lilypond.rs  main.rs  output.rs  parse.rs  plan.txt  prelude.rs  shift.rs  solve.rs  state.rs  transition.rs  util.rs
src/prelude/: harp.rs  note.rs  pitch_class.rs
tests/: test.rs
