[package]
name = "harp-pedal-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trees = "0.4.2"
rand = "0.8.5"
enum-iterator = "1.4.0"
pathfinding = "4.2.1"
clap = { version = "4.1.11", features = ["derive"] }
itertools = "0.10.5"
