[package]
name = "harp-pedal-solver"
version = "0.1.0"
edition = "2021"
authors = ["Alex Loomis <atloomis@math.arizona.edu>"]
description = "A utility to help find reasonable pedal changes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
nom = "7.1.3"
pathfinding = "4.2.1"
simple_logger = "4.1.0"
trees = "0.4.2"
