[package]
name = "harp-pedal-solver"
version = "0.1.0"
edition = "2021"
authors = ["Alex Loomis <atloomis@math.arizona.edu>"]
description = "A utility to help find reasonable pedal changes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
nom = "7.1.3"
pathfinding = "4.10.0"
# simple_logger = "5.0.0"
trees = "0.4.2"
